[gd_scene load_steps=3 format=2]

[ext_resource path="res://tela inicial.gd" type="Script" id=1]
[ext_resource path="res://Button2.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="criar_lista" type="Button" parent="."]
margin_left = 307.0
margin_top = 251.0
margin_right = 509.0
margin_bottom = 337.0
text = "criar lista"

[node name="mostrar_lista" type="Button" parent="."]
margin_left = 55.0
margin_top = 256.0
margin_right = 257.0
margin_bottom = 342.0
text = "mostrar uma lista"
script = ExtResource( 2 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 41.0
margin_top = 400.0
margin_right = 984.0
margin_bottom = 579.0
rect_pivot_offset = Vector2( 88, 53 )

[node name="criar_texto" type="Button" parent="."]
margin_left = 766.0
margin_top = 253.0
margin_right = 968.0
margin_bottom = 339.0
text = "criar texto"

[node name="apagar" type="Button" parent="."]
margin_left = 534.0
margin_top = 252.0
margin_right = 736.0
margin_bottom = 338.0
text = "apagar "

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 62.0
margin_top = 28.0
margin_right = 976.0
margin_bottom = 227.0

[connection signal="pressed" from="criar_lista" to="." method="_on_criar_lista_pressed"]
[connection signal="pressed" from="mostrar_lista" to="." method="_on_mostrar_lista_pressed"]
[connection signal="pressed" from="criar_texto" to="." method="_on_criar_texto_pressed"]
[connection signal="pressed" from="apagar" to="." method="_on_apagar_pressed"]
